2005-08-16  Jakub Jelinek  <jakub@redhat.com>

	* unwind-ia64.c (UNW_DEC_SPILL_SPREL, UNW_DEC_SPILL_PSPREL,
	UNW_DEC_RESTORE, UNW_DEC_SPILL_REG): Increase {,ab,t}regname
	buffer sizes.

2005-08-15  Daniel Jacobowitz  <dan@codesourcery.com>

	* doc/binutils.texi (objdump): Document -M e300.

2005-08-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* readelf.c (slurp_hppa_unwind_table): Fix entry size on hppa64-hpux.
	Don't access table entries past the end of the table.

2005-08-13  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* readelf.c (get_parisc_segment_type): Handle PT_PARISC_WEAKORDER.
	(get_parisc_section_type_name): Handle SHT_PARISC_DLKM.

2005-08-11  H.J. Lu  <hongjiu.lu@intel.com>

	* NEWS: Mention "-t/--section-details" and
	"-N/--full-section-name".

	* doc/binutils.texi: Document "-t/--section-details". Remove
	"-N/--full-section-name".

	* readelf.c (do_full_section_name): Renamed to ...
	(do_section_details): This.
	(option): Rename "-N/--full-section-name" to
	"-t/--section-details".
	(usage): Likewise.
	(parse_args): Likewise.
	(get_elf_section_flags): Support do_section_details.
	(process_section_headers): Updated for do_section_details.

2005-08-04  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	* readelf.c (get_parisc_dynamic_type): Add new dynamic types.
	(get_dynamic_type): Use old values for DT_LOOS and DT_HIOS when
	e_machine is EM_PARISC.
	(get_parisc_segment_type): Add new segment types.
	(get_parisc_section_type_name): Add new section names.
	(dynamic_section_parisc_val): Add new table entries.

2005-08-01  Filip Navara  <navaraf@reactos.com>

	* dlltool.c (alphafunc): Remove and replace usage with nfunc.
	(nfunc): Fix sorting of fastcall symbols when --kill-at is used.

2005-07-25  H.J. Lu  <hongjiu.lu@intel.com>

	* readelf.c (dump_relocations): Handle SHN_X86_64_LCOMMON.
	(get_symbol_index_type): Likewise.
	(get_elf_section_flags): Handle SHF_X86_64_LARGE.

2005-07-21  Eric Christopher  <echristo@apple.com>
